# hotcorners

./: Cargo.toml  README.md  build.rs  config.toml
src/: config.rs  main.rs
