[package]
name = "hotcorners"
version = "0.2.1"
authors = ["Tim Roberts <tim@timroberts.dev>"]
edition = "2021"
license = "GPL-3.0-only"
description = "A small hot corners implementation for Windows 10/11"
repository = "https://github.com/timrobertsdev/hotcorners"
keywords = ["windows", "hotcorners"]
categories = ["command-line-utilities"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]

[profile.release]
lto = true

[dependencies]
lazy_static = "1.4.0"
toml = "0.5"

[dependencies.serde]
version = "1.0"
features = [ "derive", ]

[dependencies.windows]
version = "0.28"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]